needed to generate entity files for the sql_hr

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
@@ -7,9 +8,14 @@
 </head>
 <body>
 <h1>Hello People, This is Olakunle Balogun</h1>
-<input type="text" name="userName" value="James Carrot" th:value="${user.name}" />
-<!--<p th:text="#{home.welcome}">Welcome to our grocery store!</p>-->
-<p>Today is: <span th:text="${today}">13 february 2011</span></p>
-<img th:src="@{images/taco2.png}" width="1000" alt="no show"/>
+<p>Welcome to our grocery store!</p>
+<img th:src="@{images/taco2.png}" width="100" alt="no show"/>
 </body>
 </html>
+
+
+
+
+
+
+
